# foodnreps

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260605_2bc06fa16cbd_initial_schema.py  20260606_8ccc0875ae93_add_coaching_invites_table.py
backend/application/factories/: diet_factory.py  workout_factory.py
backend/application/services/: assignment_service.py  auth_service.py  client_service.py  fitness_trainer_service.py  invite_service.py  master_coach_service.py  nutritionist_service.py  personal_plan_service.py  super_admin_service.py
backend/core/: config.py  exceptions.py  security.py
backend/domain/entities/: __init__.py  assignment.py  diet.py  enums.py  invite.py  plan.py  profile.py  user.py  workout.py
backend/domain/interfaces/: __init__.py  repositories.py  services.py
backend/infrastructure/db/: base.py  models.py  session.py
backend/infrastructure/repositories/: __init__.py  assignment_repository.py  diet_repository.py  invite_repository.py  plan_repository.py  profile_repository.py  user_repository.py  workout_repository.py
backend/presentation/api/: dependencies.py
backend/presentation/api/routes/: admin.py  auth.py  client.py  coach.py  invites.py  nutritionist.py  personal.py  trainer.py
backend/presentation/middleware/: auth_guard.py
backend/tests/: conftest.py
backend/tests/integration/: test_repositories.py
backend/tests/unit/: conftest.py
(+77 files in other folders)
