[project]
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "bcrypt",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest", "pytest-asyncio", "httpx",
    "ruff", "mypy",
    "sqlalchemy[mypy]",  # mypy plugin for SQLAlchemy types
]